[package]
name = "opsin"
version = "0.0.0"
edition = "2024"
description = "Spectral image viewer and converter, with the minimal edits a viewer earns: exposure, rotation, starring, culling. The observer is a variable. Full editing belongs to a separate crate."
license-file = "LICENSE"
repository = "https://github.com/nickspiker/opsin"
keywords = ["spectral", "image", "viewer", "raw", "vsf"]
categories = ["multimedia::images"]
# The hero webp renders in the README via its raw URL; the orb .rgb is a make_orb intermediate. Neither ships. The orb .vsf DOES ship (include_bytes! in app.rs).
exclude = ["opsin.webp", "assets/opsin_orb.rgb"]

[dependencies]
# Container format — VSF-Image sections (sensor plane, spectral characterization, provenance chain).
vsf = { version = "0.9.2", path = "../vsf", features = ["inspect"] }
# Sensor intake — decodes RAW/DNG to counts + gives us both DNG ColorMatrices and illuminant codes to build the tiered colour_profile.
iris = { version = "0.0.0", path = "../iris" }
# CPU softbuffer compositor — hosts the viewer's event loop, chrome, paint primitives. Same dep shape as Photon's desktop block.
fluor = { version = "0.0.2", path = "../fluor", default-features = false, features = ["std", "text", "simd", "rayon", "host-winit"] }
